<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/bottom_home_selector"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />



    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_my_search_title" />


    <item
        android:id="@+id/menu_main_btm_nav_reels"
        android:icon="@drawable/ic_reels"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_my_reels_title" />


    <item
        android:id="@+id/menu_main_btm_nav_shop"
        android:icon="@drawable/bottom_shop_selector"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_my_shop_title" />


    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/bottom_mypage_selector"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_my_page_title" />

</menu>
